test-cases/valid/reject/mult_mismatched_operand_types.ul
void main() {
    println 1 * 2.0; // LHS and RHS types must match.
}
